--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,25 +8,28 @@
     android:layout_height="match_parent"
     android:background="@drawable/img_home_background">
 
-    <!-- 비 내리는 애니메이션 -->
+    <!-- 비 내리는 애니메이션-->
     <com.jetradarmobile.snowfall.SnowfallView
+        android:id="@+id/drop_raindrop"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:snowflakesNum="80"
+        app:snowflakesNum="60"
         app:snowflakeAlphaMin="150"
         app:snowflakeAlphaMax="255"
         app:snowflakeAngleMax="0"
-        app:snowflakeSizeMin="2dp"
-        app:snowflakeSizeMax="5dp"
-        app:snowflakeSpeedMin="5"
-        app:snowflakeSpeedMax="15"
+        app:snowflakeSizeMin="5dp"
+        app:snowflakeSizeMax="10dp"
+        app:snowflakeSpeedMin="10"
+        app:snowflakeSpeedMax="20"
         app:snowflakesFadingEnabled="true"
         app:snowflakesAlreadyFalling="true"
         app:snowflakeImage="@drawable/img_raindrop"
-        android:visibility="visible" />
+        android:visibility="invisible" />
+
 
     <!-- 눈 내리는 애니메이션 -->
     <com.jetradarmobile.snowfall.SnowfallView
+        android:id="@+id/drop_snowball"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:snowflakesNum="50"
